assets/style.css
@import url("https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800&display=swap");

@font-face {
  font-family: UraeNium;
  src: url("urae_nium.ttf");
}

body {
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  margin: 0;
  padding: 0;
  background-color: #252528;
  color: #f7f7f7;
}

.main-logo {
  color: #50fafd;
  font-family: UraeNium;
}

.header {
  text-transform: uppercase;
  font-weight: 700;
}

.logo-container {
  position: absolute;
  top: 55%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 30%;
}

.logo {
}

.img-logo {
  opacity: 0;
}

.header {
  opacity: 0;
  margin-top: 10rem;
  letter-spacing: 1px;
}

.vh-100 {
  display: flex;
  height: 100vh;
  justify-content: center;
  align-items: center;
}

#particles-js {
  position: absolute;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: 50% 50%;
} /* ---- stats.js ---- */


@media (min-width: 768px) and (max-width: 1024px) {
  .logo-container {
    width: 60%;
  }
}

@media (min-width: 481px) and (max-width: 767px) {
  .logo-container {
    width: 60%;
  }
}

/* 
  ##Device = Most of the Smartphones Mobiles (Portrait)
  ##Screen = B/w 320px to 479px
*/

@media (min-width: 320px) and (max-width: 480px) {
  .logo-container {
    width: 60%;
  }
}

